tests/baselines/reference/letInConstDeclarations_ES6.errors.txt
letInConstDeclarations_ES6.ts(2,15): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
letInConstDeclarations_ES6.ts(2,15): error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.
letInConstDeclarations_ES6.ts(5,19): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
letInConstDeclarations_ES6.ts(5,19): error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.


==== letInConstDeclarations_ES6.ts (4 errors) ====
    // All use of let in const declaration should be an error
    const x = 50, let = 5;
                  ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
                  ~~~
!!! error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.
    
    {
        const x = 10, let = 20;
                      ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
                      ~~~
!!! error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.
    }